...
                            <constraint firstAttribute="trailing" secondItem="YWU-Ma-Wde" secondAttribute="trailing" id="QIH-4n-swn"/>
                            <constraint firstAttribute="bottom" secondItem="c6Y-yF-szq" secondAttribute="bottom" id="csW-0L-ImP"/>
                            <constraint firstItem="bam-Dw-5q0" firstAttribute="top" secondItem="YWU-Ma-Wde" secondAttribute="bottom" id="dQQ-71-BNu"/>
                            <constraint firstItem="YWU-Ma-Wde" firstAttribute="leading" secondItem="65g-4A-NuH" secondAttribute="leading" id="wLk-ax-vnh"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Search" id="9yE-fJ-3l8">
                        <barButtonItem key="backBarButtonItem" title=" " id="TiL-3g-xAB"/>
                        <barButtonItem key="rightBarButtonItem" title="Item" id="pW4-Bt-JMi">
                            <connections>
                                <action selector="rightMenuAction:" destination="t1B-qF-FHV" id="sIH-p9-Kg8"/>
                            </connections>
                        </barButtonItem>
...
                            <constraint firstItem="Dwq-OW-JWe" firstAttribute="bottom" secondItem="L3H-tG-FX0" secondAttribute="top" id="5c0-k6-iIf"/>
                            <constraint firstItem="Dwq-OW-JWe" firstAttribute="top" secondItem="qij-hE-wlh" secondAttribute="bottom" id="an7-gV-DPE"/>
                            <constraint firstItem="Dwq-OW-JWe" firstAttribute="leading" secondItem="ohl-uH-qHZ" secondAttribute="leading" id="s2b-Pl-09v"/>
                            <constraint firstAttribute="trailing" secondItem="Dwq-OW-JWe" secondAttribute="trailing" id="suy-nz-jct"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="More" id="7Rk-nP-l6m">
                        <barButtonItem key="backBarButtonItem" title=" " id="T9j-Tw-H15"/>
                    </navigationItem>
                    <connections>
                        <outlet property="tableView" destination="Dwq-OW-JWe" id="w5B-Jq-jUb"/>
                        <segue destination="t1B-qF-FHV" kind="show" identifier="showSearch" id="UrL-X6-SyK"/>
                        <segue destination="eLp-Dt-MRm" kind="show" identifier="showBannedAndRestricted" id="nJO-zw-y4u"/>
...
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lwY-NB-cLT">
                                        <rect key="frame" x="111.66666666666666" y="100" width="38" height="30"/>
                                        <state key="normal" title="Login"/>
                                        <connections>
                                            <action selector="loginAction:" destination="Scc-uM-cUd" eventType="touchUpInside" id="9aO-j3-pOw"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yRE-BY-ElP">
                                        <rect key="frame" x="69" y="150" width="123" height="30"/>
...
                                                </label>
                                                <button opaque="NO" tag="200" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0cl-ZY-PdD">
                                                    <rect key="frame" x="340" y="7" width="65" height="30"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="65" id="xgS-Vm-ZWT"/>
                                                    </constraints>
                                                    <state key="normal" title="See All"/>
                                                    <connections>
                                                        <action selector="seeAllAction:" destination="gPO-pe-Wgd" eventType="touchUpInside" id="QBv-No-BL2"/>
                                                    </connections>
                                                </button>
                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" tag="300" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="qb2-fe-jBg">
                                                    <rect key="frame" x="0.0" y="30.999999999999993" width="414" height="106.33333333333331"/>
...
                            <constraint firstItem="eMj-Mf-pjc" firstAttribute="bottom" secondItem="ENL-5T-aaY" secondAttribute="top" id="DCC-bN-AxG"/>
                            <constraint firstItem="eMj-Mf-pjc" firstAttribute="leading" secondItem="Mo3-2H-vnr" secondAttribute="leading" id="H1V-2g-SOp"/>
                            <constraint firstAttribute="trailing" secondItem="eMj-Mf-pjc" secondAttribute="trailing" id="J4b-qz-JOl"/>
                            <constraint firstItem="eMj-Mf-pjc" firstAttribute="top" secondItem="wL9-IC-yeB" secondAttribute="bottom" id="Mpn-rs-qAw"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Account" id="Ohz-r0-vwI">
                        <barButtonItem key="backBarButtonItem" title=" " id="yeV-j1-QSZ"/>
                        <barButtonItem key="rightBarButtonItem" title="Login" id="JOc-Ku-cUc">
                            <connections>
                                <action selector="loginAction:" destination="xiT-xW-PPD" id="R0b-t9-v4M"/>
                            </connections>
                        </barButtonItem>
...
