...
    }
    
    private var cancelButton: some View {
        Button(action: {
            cancelAction()
        }) {
            Text("Cancel")
                .font(Font.custom(ManaKit.Fonts.magic2015.name,
                                  size: 20))
                .padding(10)
                .cornerRadius(10)
                .overlay(
                    RoundedRectangle(cornerRadius: 10)
...
